<resources>
    <string name="app_name">WeatherApp</string>
    <string name="add">Add</string>
    <string name="help">Help</string>
    <string name="empty_bookmarks">Empty bookmarks, you can add new location by clicking on the Add button at the top right corner of your screen</string>
    <string name="add_marker_warning">Please add a marker on the map</string>
    <string name="temperature">Temperature (°C):</string>
    <string name="temperature_min">Min (°C):</string>
    <string name="temperature_max">Max (°C):</string>
    <string name="humidity">Humidity (%):</string>
    <string name="rain">Last 3 hours rain:</string>
    <string name="wind">Wind Speed:</string>
    <string name="unknown_name">Unknown name</string>
</resources>
